testdata/de/dm/intellij/liferay/language/osgi/ComponentServiceInheritanceInspectionTest/MyComponent.java
import org.osgi.service.component.annotations.Component;
import com.liferay.portal.kernel.portlet.bridges.mvc.MVCActionCommand;

@Component(
    service = MVCActionCommand.class
)
public class <error descr="Class MyComponent is not assignable to specified service com.liferay.portal.kernel.portlet.bridges.mvc.MVCActionCommand">MyComponent</error> {
}